---
source: src/reg_compiler/tests.rs
expression: bytecode
---
0 ; script
1 [   1]  Push           L12:  
2 [   1]  LoadImediate   r3[fn([nil], 0)] (local *3)  
3 ; imediate killed 4 for global *0
4 [   1]  MemCpy         (global *0)  r3[fn([nil], 0)] (1u)  
5 [   1]  Pop            
6 ; imediate killed 5 for global *0
7 [   0]  Move           r6[&fn([nil], 0)] (global *0)  
8 [   0]  Move           r7[fn([nil], 0)] r6[&fn([nil], 0)] 
9 [   0]  PreCall        r8[nil] r7[fn([nil], 0)] (0u)  
10 [   0]  Call           
11 [   0]  Halt           
12 ; main
13 ; imediate killed 1 for true
14 [   1]  Push           r0[nil] 
15 [   1]  LoadImediate   r2[*bool] (local *3)  
16 [   1]  Store          r2[*bool] (true)  
17 [   1]  Return         r0[nil] (0u)
